[package]
name = "sucredb"
version = "0.1.0"
authors = ["arthurprs"]

[dependencies]
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
log = "0.3"
byteorder="1.0"
tokio-core = "0.1"
tokio-io = "0.1"
futures = "0.1"
clap="2.0"
crc16="0.3"
metrics="0.2"
lazy_static = "0.2"
serde_yaml = "0.7"
bincode="0.8"
num_cpus="1.0"
roaring="0.5"

[dependencies.log4rs]
version = "0.7"
default-features = false
features = ["all_components", "file", "yaml_format"]

[dependencies.rocksdb]
git = "https://github.com/pingcap/rust-rocksdb.git"
rev = "fb75c242620e0bf85e4176f142481493851b0ed4"
features = ["static-link", "portable", "sse"]

[dependencies.linear-map]
version = "1.2"
features = ["serde_impl"]

[dependencies.bytes]
version = "0.4"
features = ["serde"]

[dev-dependencies]
env_logger = "0.4"

[profile.dev]
codegen-units=4

[profile.test]
codegen-units=4

# enable for profiling
# [profile.release]
# debug=true
