[package]
name = "sucredb"
version = "0.1.0"
authors = ["arthurprs"]

[dependencies]
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
byteorder="1.0"
tokio-core = "0.1"
tokio-io = "0.1"
futures = "0.1"
clap="2.0"
crc16="0.3"
metrics="0.2"
lazy_static = "1.0"
serde_yaml = "0.7"
bincode="0.9"
num_cpus="1.0"
roaring="0.5"

[dependencies.log4rs]
version = "0.8"
default-features = false
features = ["all_components", "file", "yaml_format"]

[dependencies.rocksdb]
git = "https://github.com/pingcap/rust-rocksdb.git"
rev = "61d419d3d90c980b4198f993312b06e4ba4077c9"
features = ["static-link", "portable", "sse"]

[dependencies.linear-map]
version = "1.2"
features = ["serde_impl"]

[dependencies.bytes]
version = "0.4"
features = ["serde"]

[dev-dependencies]
env_logger = "0.5.0-rc.1"

# enable for profiling
# [profile.release]
# debug=true
