[package]
name = "sucredb"
version = "0.1.0"
authors = ["arthurprs"]

[dependencies]
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
byteorder="1.0"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-codec = "0.1"
futures = "0.1"
clap="2.0"
crc16="0.4"
metrics="0.2"
lazy_static = "1.0"
serde_yaml = "0.8"
bincode="1.0"
num_cpus="1.0"
roaring="0.5"
crossbeam-channel="0.2"

[dependencies.log4rs]
version = "0.8"
default-features = false
features = ["all_components", "file", "yaml_format"]

[dependencies.rocksdb]
git = "https://github.com/pingcap/rust-rocksdb.git"
rev = "b011ecb17759d052ae39e2c86addc7b1c7e6c178"
features = ["portable", "sse"]

[dependencies.linear-map]
version = "1.2"
features = ["serde_impl"]

[dependencies.bytes]
version = "0.4"
features = ["serde"]

[dev-dependencies]
env_logger = "0.5.0"

# enable for profiling
# [profile.release]
# debug=true
